5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1834_1279.log
== SUBMITION (2019-07-09 14:43:55) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		 xtab -= 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab += 1
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
print(tabuleiro)

-- EXECUTION TIME:
0.710966
-- ERROR:
  File "/home/codebench/codes/1834/1279/main.py", line 15
    xtab = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:44:18) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("hgtf:"))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		 xtab -= 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab += 1
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
print(tabuleiro)

-- EXECUTION TIME:
0.628556
-- ERROR:
  File "/home/codebench/codes/1834/1279/main.py", line 12
    mov = input()
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
